# onto-standard

./: .gitignore  API_REQUIREMENTS.md  ARXIV_SUBMISSION_CHECKLIST.md  CHANGELOG.md  CLAUDE_GENERAL_PROTOCOL.md  DATASET_VERSION.txt  Dockerfile  GOVERNANCE.md  LICENSE  ONTO_PROTOCOL_MASTER.md  README.md  README_GITHUB.md  README_PACKAGE.md  RELEASE_PROTOCOL.md  REPRODUCE.md  REPRODUCIBILITY_CHECKLIST.md  change-password.js  check-users.js  cleanup-users.js  create-apikey.js  create-superadmin.js  docker-compose.yml  getkey.py  migrate.js  nginx.conf  onto-client-portal-v4.html  onto-landing.html  onto-v15-1-95-percent.html  openapi.json  package-lock.json  patch-admin.js  patch-change-password.js  patch-portal-admin.js  patch-settings-password.js  pyproject.toml  requirements-leaderboard.txt  requirements.txt  set-superadmin.js  setup.py  start-onto.ps1  (+1 more)
.github/workflows/: ci.yml  publish.yml
agent-play/: gen_feature_graphic.py
annual_reports/2026/: summary.json
arxiv_submission/: README.txt  appendix_reproducibility.tex  main.aux  main.tex
arxiv_submission/tables/: dataset_table.tex
backend/: Dockerfile  app.py  onto_bridge.py  railway.json  requirements.txt  signal_packet.py
baselines/: onto_oracle.py  run_all.py
business/: ANNUAL_REPORT_PIPELINE.md  CONSORTIUM_PLAN.md
data/: contradictions.jsonl  known_facts.jsonl  open_problems.jsonl  split_info.json  test.jsonl  train.jsonl  version.json
docs/: CNAME  ONTO_OS_BLUEPRINT.md  charter.html  council.html  docs.html  documentation.html  index.html  layer-spec.html  license.html  llms.txt  pitch.html  pricing.html  privacy.html  refund.html  regulatory.html  robots.txt  send.py  site.webmanifest  sitemap.xml  terms.html
docs/.well-known/: assetlinks.json
docs/agent/: index.html  index.html.pre-share.bak  index.html.pre-splash-fix.bak  index.html.pre-telegram.bak  index.html.v2.13.bak  manifest.json  manifest.json.pre-A2.bak  sw.js  sw.js.pre-v1.bak
docs/app/: index-backup.html  index.html
docs/audits/: cs-2026-001.html  index.html
docs/business/: index.html
docs/check/: index.html
docs/demo/: index.html
docs/docs/: charter.html  council.html  index.html  layer-spec.html  license.html  regulatory.html
docs/documentation/: CONSORTIUM_PLAN.md  LEADERBOARD_SPEC.md  ONTO-COLOR-SCHEME.md  ONTO-ERS-SPEC-v1.md  ONTO_AGENT_NEURIPS.md  ONTO_AGENT_V2_ROADMAP.md  PR_STRATEGY.md
docs/encounter/: index.html
docs/gov/: index.html
docs/hayot/: index.html
docs/investor/: index.html
docs/lab/: index.html
docs/license/: index.html
docs/methodology/: index.html
docs/paper/: index.html  paper_full.html  whitepaper.md
docs/pitch/: index-v3-backup.html  index.html  index.html.v4-backup
docs/privacy/: index.html
docs/provider/: index.html
docs/refund/: index.html
docs/regulator/: index.html
docs/reports/: F-002_Statins.md  FO-2026-003.md  FO-2026-004.md  IR-2026-001.html  index.html  index_working.html  view.html
docs/reports_backup_20260307_182155/: F-001_Grok_AGI.md  F-002_Statins.md  IR-2026-001.md  index.html
docs/resume/: index.html
docs/shermatov/: index.html
docs/specs/: ONTO-EUI-PATTERNS-v1.md
docs/terms/: index.html
enterprise/: api.py  executive_report.py  landing.html  sample_report.html  sdk.py  security.py
governance/: ONTO_STANDARD_v1.0.md  STANDARDS_COUNCIL.md
launch/: CANONICAL_SITE.md  CITATION_STRATEGY.md  DEV_ADOPTION_CALENDAR.md  GLOBAL_LAUNCH_PROTOCOL.md  HN_LAUNCH.md  HN_POST.md  LEADERBOARD_PLAYBOOK.md  MASTER_CHECKLIST.md  PUBLISH_PROTOCOL.md  REDDIT_ML_LAUNCH.md  SIGNED_RELEASE_PROTOCOL.md  TWITTER_LAUNCH.md  TWITTER_THREAD.md  ZENODO_DOI_PIPELINE.md
leaderboard/: api.py  index.html
onto-core/: Cargo.toml  README.md  pyproject.toml  test_genesis.py
onto-core/src/: entropy.rs  lib.rs  merkle.rs  metrics.rs
onto-extension/: content.css  content.js  manifest.json  popup.html
onto-notary/: Dockerfile  requirements.txt  server.py  test_full_chain.py
onto-signal/: .gitignore  Dockerfile  railway.json  requirements.txt  server.py  streamer.py
onto_standard/: __init__.py
onto_standard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
outputs/: gpt4_mock.jsonl
paper/: SUBMISSION_CHECKLIST.md  appendix_ethics.tex  claims.tex  claims_limitations.tex  limitations.tex  onto_challenge_paper.tex  onto_paper.tex
research/: ONTO_AGENT_NEURIPS_PLAN.md  ONTO_OS_TECHNICAL_SPEC.md
results/: metrics.json  paper_table.tex  significance.json
sales/: BATTLECARDS.md  BOARD_SLIDE.html  BUYER_PERSONAS.md  CASE_STUDIES.md  CFO_FEAR_GRAPHIC.html  CFO_PITCH.md  CLOSING_PROTOCOL.md  COLD_EMAILS.md  CONTRACT_TEMPLATE.md  EXECUTIVE_ONE_PAGER.md  OUTBOUND_50.md  PRICING.md  PROCUREMENT_SPEC.md  REGULATORY_POSITIONING.md  ROI_CALCULATOR.csv  SALES_DECK.md  SALES_ENGINE.md  TARGET_LIST.md  TRUST_MARK.md  roi_calculator.py
schema/: sample_schema.json
scripts/: agreement.py  annual_report.py  build_arxiv.py  build_dataset.py  dataset_version.py  eval_harness.py  expand_dataset.py  generate_plots.py  generate_tables.py  metrics.py  metrics_extended.py  split_dataset.py
tests/: test_onto_standard.py
validation/: agreement_report.json
(+40 files in other folders)
