[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-standard"
version = "10.1.0"
description = "ONTO Standard — Epistemic Risk Measurement for AI Systems. Two key metrics: ECE (calibration error) and U-Recall (unknown detection). Result: compliance level (None/Basic/Standard/Advanced). Not philosophy, not a framework, not blockchain."
readme = "README_PACKAGE.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    {name = "ONTO Standards Council", email = "standards@ontostandard.org"}
]
keywords = ["ai", "ml", "llm", "calibration", "uncertainty", "epistemic", "compliance", "risk", "onto"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
api = ["httpx>=0.24"]

[project.urls]
Homepage = "https://ontostandard.org"
Documentation = "https://ontostandard.org/docs"
Source = "https://github.com/nickarstrong/onto-standard"
Issues = "https://github.com/nickarstrong/onto-standard/issues"

[project.scripts]
onto-standard = "onto_standard:main"
