[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "onto-core"
version = "0.1.0"
description = "ONTO Stealth Compliance SDK for AI Reliability"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"

[tool.maturin]
module-name = "onto_core"
features = ["pyo3/extension-module"]
strip = true
